<resources>
    <string name="app_name">Foobar Application</string>
    <string name="name">name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">email address</string>
    <string name="sign_up">Sign up</string>
    <string name="Log_out">Log out</string>
    <string name="light_mode">Light/Dark mode</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="messanger">Messanger</string>
    <string name="group">Group</string>
    <string name="author">Author</string>
    <string name="content">Content</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="submit">Submit</string>
    <string name="likes_format">%d likes</string>
    <string name="_0_comments">0 comments</string>
    <string name="default_comment_text">default_comment_text</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="copy_link">Copy link</string>
    <string name="my_friends">My Friends</string>
    <string name="user_profile">User Profile</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="profile_friends">Profile Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="Profile">Go To Profile</string>
    <string name="on_your_mind">What\'s on your mind ?</string>
    <string name="add_post">add Post</string>
    <string name="friend_request">Friends Requests</string>
    <string name="edit">\n</string>
    <string name="Delete">\n</string>
    <string name="date_format">%s</string>
</resources>